# Ancer_demo

./: README.md
trajectory_logger/: .package.xml.swp  CMakeLists.txt  README.md
trajectory_logger/config/: trajectory_logger.rviz
trajectory_logger/include/trajectory_logger/: trajectory_publisher_saver.hpp  trajectory_reader_publisher.hpp
trajectory_logger/install/: local_setup.sh  setup.sh
trajectory_logger/install/trajectory_logger/include/trajectory_logger/: trajectory_publisher_saver.hpp  trajectory_reader_publisher.hpp
trajectory_logger/install/trajectory_logger/lib/trajectory_logger/: test_odom_publisher  trajectory_publisher_saver  trajectory_reader_publisher
trajectory_logger/install/trajectory_logger/lib/trajectory_logger/scripts/: tmux.conf
trajectory_logger/install/trajectory_logger/share/trajectory_logger/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
trajectory_logger/install/trajectory_logger/share/trajectory_logger/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_trajectory_logger__rosidl_generator_pyExport-noconfig.cmake  export_trajectory_logger__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_trajectory_logger__rosidl_typesupport_fastrtps_cExport.cmake  export_trajectory_logger__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  trajectory_loggerConfig-version.cmake  trajectory_loggerConfig.cmake  trajectory_logger__rosidl_typesupport_cppExport.cmake  trajectory_logger__rosidl_typesupport_introspection_cExport.cmake  trajectory_logger__rosidl_typesupport_introspection_cppExport-noconfig.cmake
trajectory_logger/install/trajectory_logger/share/trajectory_logger/config/: params.yaml
trajectory_logger/install/trajectory_logger/share/trajectory_logger/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
trajectory_logger/install/trajectory_logger/share/trajectory_logger/launch/: trajectory_logger_launch.py
trajectory_logger/install/trajectory_logger/share/trajectory_logger/srv/: SaveTrajectory.idl  SaveTrajectory.srv  (+2 more)
trajectory_logger/launch/: trajectory_logger_launch.py
trajectory_logger/log/: latest_build
trajectory_logger/scripts/: run_demo.sh
trajectory_logger/src/: test_odom_publisher.cpp  trajectory_publisher_saver.cpp  trajectory_reader_publisher.cpp
trajectory_logger/trajectories/: circle.txt  demo_trajectory.txt  test_trajectory.txt
(+34 files in other folders)
